# UnmannedTestingSystem

./: CMakeLists.txt  CMakeLists.txt.user.15ddb70  ControlStationDialog.cpp  ControlStationDialog.h  ControlStationDialog.ui  ControlStationManageWindow.cpp  ControlStationManageWindow.h  ControlStationManageWindow.ui  DBUtil.cpp  DBUtil.h  DataDicDialog.cpp  DataDicDialog.h  DataDicDialog.ui  DataDicWindow.cpp  DataDicWindow.h  DataDicWindow.ui  InstructionDialog.cpp  InstructionDialog.h  InstructionDialog.ui  InstructionManageWindow.cpp  InstructionManageWindow.h  InstructionManageWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MessageFormatDialog.cpp  MessageFormatDialog.h  MessageFormatDialog.ui  NewTaskWithItemsDialog.cpp  NewTaskWithItemsDialog.h  NewTaskWithItemsDialog.ui  OrgManageWindow.cpp  OrgManageWindow.h  OrgManageWindow.ui  PermissionManageWindow.cpp  PermissionManageWindow.h  PermissionManageWindow.ui  ProtocolDialog.cpp  ProtocolDialog.h  ProtocolDialog.ui  (+30 more)
